<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="740dp"
        android:layout_gravity="center"
        android:background="@color/my_app_secondary_color"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar"/>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"></androidx.core.widget.NestedScrollView>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_fullname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true">

            <EditText
                style="@style/Widget.AppCompat.EditText"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="10dp"
                android:background="@color/my_app_secondary_color"
                android:hint="@string/nombre"

                android:inputType="text"
                android:textColor="@color/text_color"
                android:textColorHint="@color/text_color" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/myDate"
            android:layout_width="245dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="70dp"
            android:background="@color/my_app_primary_color"
            android:text="@string/myDate"
            android:textAlignment="center"
            android:textColor="@color/text_color"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="243dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="70dp"
            android:background="@drawable/bg_color"
            android:orientation="vertical">

            <CalendarView
                android:id="@+id/calendarView"
                android:layout_width="240dp"
                android:layout_height="250dp"
                android:fitsSystemWindows="true"
                android:focusedMonthDateColor="#414839"
                android:minHeight="200dp"
                android:unfocusedMonthDateColor="#40463A" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:orientation="horizontal">

                <Button
                    android:layout_width="150dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/cancel_btn" />

                <Button
                    android:layout_width="90dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/ok_btn" />
            </LinearLayout>
        </LinearLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true">

            <EditText
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:background="@color/my_app_secondary_color"
                android:hint="@string/phone_number"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true">

            <EditText
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:background="@color/my_app_secondary_color"
                android:hint="@string/correo_electronico"
                android:inputType="textEmailSubject" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/user_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true">

            <EditText
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:background="@color/my_app_secondary_color"
                android:hint="@string/user_description"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/next_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/next_btn"

            />

    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>



